--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,8 @@
 <html ng-app="books">
 <head>
 	<title>NG CRUD</title>
+
+	<!-- Style -->
 	<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<style type="text/css">
 		body {
@@ -11,33 +13,45 @@
 		.sidebar-nav {
 			padding: 9px 0;
 		}
+		.crud-view {
+			padding: 10px 20px;
+			background-color: #f5f5f5;
+			border: 1px solid #e3e3e3;
+			border-radius: 6px;
+		}
     </style>
+
+    <!-- Libs -->
 	<script src="lib/jquery-2.1.3.min.js"></script>
 	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 	<script src="lib/angular.min.js"></script>
 	<script src="lib/angular-route.min.js"></script>
+	<!-- App -->
+	<script src="js/books.js"></script>
 </head>
 
 <body>
 
     <div class="container-fluid">
       <div class="row-fluid">
+
         <div class="span3">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li><a href="#" onclick="location.reload(true)">Home</a></li>
               <li class="nav-header">Tables</li>
-              <li><a href="#combos">Combos</a></li>
-              <li><a href="#users">Users</a></li>
               <li><a href="#books">Books</a></li>
+              <li><a href="#users">Users</a></li>
+              <li><a href="#combos">Combos</a></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
 
         <div class="span9">
-          <div class="hero-unit" ng-view></div>
+          <div class="crud-view" ng-view></div>
         </div><!--/span-->
-      </div><!--/row-->
+
+      </div><!--/row-fluid-->
     </div>
 
       <script>
@@ -48,28 +62,6 @@
       			$('li', this.parentElement).removeClass('active');
       			$(this).addClass('active');
       		});
-
-      		// Angular code
-			angular.module('books', [
-				'ngRoute'
-			])
-			.config(['$routeProvider', function($routeProvider) {
-				$routeProvider
-				.when('/', {
-					templateUrl: 'views/welcome.html',
-					controller: 'CrudCtrl'
-				})
-				.when('/combos', {
-					templateUrl: 'views/combos.html',
-					controller: 'CrudCtrl'
-				})
-				.otherwise({
-					redirectTo: '/'
-				});
-			}])
-			.controller('CrudCtrl', ['$scope', '$http', function ($scope, $http) {
-				$scope.items = [{a: 1, b: 2}, {a: 3, b: 4}];
-			}]);
 
 		})();
       </script>
