--- a/web/index.html
+++ b/web/index.html
@@ -24,9 +24,15 @@
       color: #999;
       text-transform: uppercase;
     }
+    /*.nav-list>li>a {
+      padding: 5px 15px;
+    }*/
     .nav-list>.active>a, .nav-list>.active>a:hover , .nav-list>.active>a:focus {
       background-color: #08c;
       color: #fff;
+    }
+    button > a:hover {
+      text-decoration: none;
     }
     </style>
 
