Further modularization and custom element directives

--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,8 @@
 	<script src="lib/angular.min.js"></script>
 	<script src="lib/angular-route.min.js"></script>
 	<!-- App -->
-	<script src="js/books.js"></script>
+  <script src="js/crud.js"></script>
+  <script src="js/books.js"></script>
 </head>
 
 <body>
