--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,8 @@
 	<script src="lib/jquery-2.1.3.min.js"></script>
 	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 	<script src="lib/angular.min.js"></script>
-	<script src="lib/angular-route.min.js"></script>
+  <script src="lib/angular-route.min.js"></script>
+  <script src="lib/angular-sanitize.min.js"></script>
 	<!-- App -->
   <script src="js/crud.js"></script>
   <script src="js/books.js"></script>
