--- a/web/index.html
+++ b/web/index.html
@@ -60,6 +60,7 @@
               <li><a href="#books">Books</a></li>
               <li><a href="#users">Users</a></li>
               <li><a href="#combos">Combos</a></li>
+              <li><a href="#tests">Tests</a></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
