--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
   <script src="lib/angular-route.min.js"></script>
   <script src="lib/angular-sanitize.min.js"></script>
 	<!-- App -->
-  <script src="js/crud.js"></script>
+  <script src="js/crud.min.js"></script>
   <script src="js/books.js"></script>
 </head>
 
